--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,3 +46,34 @@ nav a {
 nav a:hover {
     text-decoration: underline;
 }
+
+aside{
+    width: 40%;
+    padding-left: 0.5rem;
+    margin-left: 0.5rem;
+    float: right;
+    box-shadow: inset 5px 0
+    5px -5px #29627e;
+    font-style: italic;
+    color: #29627e;
+}
+div.divicioncita{
+    border:8px solid rgb(121, 121, 187);
+    padding-top: 50px;
+    padding-right: 30px;
+    padding-bottom: 50px;
+    padding-left: 80px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-right: 150px;
+    margin-left: 80px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: rgb(194, 251, 229);
+    text-align: justify;
+}
+
+div.divicioncita2{
+    border: 12px groove rgb(47, 136, 91);
+    padding: 50px 30px 50px 80px;
+    margin: 25px 50px 75px 100px;
+}
